--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "dependencies": {},
   "devDependencies": {
     "@nrwl/cli": "13.10.6",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/workspace": "13.10.6",
+    "@nrwl/nx-cloud": "14.7.0",
+    "@nrwl/workspace": "14.8.2",
     "@types/node": "16.11.7",
-    "nx": "13.10.6",
-    "prettier": "^2.5.1",
-    "typescript": "~4.6.2"
+    "nx": "14.8.2",
+    "prettier": "2.6.2",
+    "typescript": "4.8.4"
   }
 }
+
