--- a/libs/scribe/data-access/project.json
+++ b/libs/scribe/data-access/project.json
@@ -1,15 +1,15 @@
 {
-  "name": "feature-layout",
+  "name": "scribe-data-access",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "projectType": "library",
-  "sourceRoot": "libs/container/feature-layout/src",
+  "sourceRoot": "libs/scribe/data-access/src",
   "prefix": "ng-scribe",
   "targets": {
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/container/feature-layout"],
+      "outputs": ["coverage/libs/scribe/data-access"],
       "options": {
-        "jestConfig": "libs/container/feature-layout/jest.config.ts",
+        "jestConfig": "libs/scribe/data-access/jest.config.ts",
         "passWithNoTests": true
       }
     },
@@ -17,11 +17,11 @@
       "executor": "@nrwl/linter:eslint",
       "options": {
         "lintFilePatterns": [
-          "libs/container/feature-layout/**/*.ts",
-          "libs/container/feature-layout/**/*.html"
+          "libs/scribe/data-access/**/*.ts",
+          "libs/scribe/data-access/**/*.html"
         ]
       }
     }
   },
-  "tags": ["scope:container", "type:feature"]
+  "tags": []
 }
