--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@datorama/akita": "^7.1.1",
     "@datorama/akita-ng-router-store": "^7.0.0",
     "@datorama/akita-ngdevtools": "^7.0.0",
+    "@types/quill": "^2.0.9",
+    "ngx-quill": "^19.0.1",
+    "quill": "^1.3.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
