--- a/libs/shared/feature-ui/project.json
+++ b/libs/shared/feature-ui/project.json
@@ -1,15 +1,15 @@
 {
-  "name": "feature-editor",
+  "name": "shared-feature-ui",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "projectType": "library",
-  "sourceRoot": "libs/scribe/feature-editor/src",
+  "sourceRoot": "libs/shared/feature-ui/src",
   "prefix": "ng-scribe",
   "targets": {
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/scribe/feature-editor"],
+      "outputs": ["coverage/libs/shared/feature-ui"],
       "options": {
-        "jestConfig": "libs/scribe/feature-editor/jest.config.ts",
+        "jestConfig": "libs/shared/feature-ui/jest.config.ts",
         "passWithNoTests": true
       }
     },
@@ -17,8 +17,8 @@
       "executor": "@nrwl/linter:eslint",
       "options": {
         "lintFilePatterns": [
-          "libs/scribe/feature-editor/**/*.ts",
-          "libs/scribe/feature-editor/**/*.html"
+          "libs/shared/feature-ui/**/*.ts",
+          "libs/shared/feature-ui/**/*.html"
         ]
       }
     }
